# tastebudz

./: .gitignore  App.js  LandingPage.jsx  LoginPage.jsx  README.md  config.py  conftest.py  pyproject.toml  requirements.txt
dataset/archive/: bow_data.csv  clean_data.py  geo_fence_data.csv  location_tf_idf.ipynb
dataset/yelp/: chicago_restaurants.csv  clean_categories.ipynb  clean_data.csv  clean_prep_data.ipynb  get_yelp_data.py  recommend_data.csv  (+2 more)
design/: design.md
docs/: bugs.md
prof/: combined.prof  test_config.prof  test_get_oauth_url[-400].prof  test_get_oauth_url[google-3030].prof  test_get_oauth_url[google-3031].prof  test_get_oauth_url[notAProvider-400].prof  test_login_with_password[-P@ssw0rd-400].prof  test_login_with_password[jnmosca+testuser1@syr.edu--400].prof  test_login_with_password[jnmosca+testuser1@syr.edu-P@ssw0rd!-200].prof  test_login_with_password[jnmosca+testuser1@syr.edu-P@ssw0rd-401].prof  test_login_with_password[jnmosca+testuser2@syr.edu-N0tMyP@55w0rd!-401].prof  test_login_with_password[jnmosca+testuser2@syr.edu-P@ssw0rd!-200].prof  test_login_with_password[jnmosca+testuser3@syr.edu-4LS0N0TM1N3$-401].prof  test_login_with_password[jnmosca+testuser3@syr.edu-P@ssw0rd!-200].prof  test_login_with_password[jnmosca+testuserA@syr.edu-Password1234-401].prof  test_logout_with_password.prof
reactApp/: package-lock.json  package.json
tastebudz/: __init__.py  auth.py  auth_old.py  gmaps.py  models.py  package-lock.json  package.json  restaurant.py  sb.py  yelp_api.py
tests/: test_auth.py  test_factory.py  test_restaurant.py  test_user.py
(+56 files in other folders)
