[project]
name = "tastebudz"
version = "1.0.0"
description = "Find food faster with Tastebudz - get personalized restaurant recommendations."
dependencies = [
    "flask",
    "supabase",
    "googlemaps"
]

[build-system]
requires = ["hatchling"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tastebudz"]
